--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="UTF-8" />
     <title>Batty's Coffee Stand</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body> 
     <header>
         <div class="container">
             <div class="header-title">
-                <h1 class"logo">Batty's coffee stand</h1>
+                <h1 class="logo">Batty's coffee stand</h1>
                 <p class="title-text">あなたに最高のコーヒーを提供します。</p>
             </div>
-            <ul class="header-navigation">
+            <ul class="header-navigation clearfix">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Menu</a></li>
@@ -21,6 +22,42 @@
             </ul>
         </div>
     </header>
+    <div class="container clearfix">
+        <main>
+            <div class="card-contents">
+                <h2 class="card-title">Information</h2>
+                <ul class="information-list">
+                    <li>2017/05/01 2号店がドイツにてオープンしました。</li>
+                    <li>2017/04/01 春メニュー提供開始しました。</li>
+                    <li>2017/01/01 Batty'Coffee Standオープンしました。</li>
+                </ul>
+            </div>
+            <div class="card-contents">
+                <h2 class="card-title">staff</h2>
+                <div class="staff-list clearfix">
+                    <div class="staff">
+                        <img src="img/staff_01.png" class="staff-image">
+                        <p class="staff-name">Batty Obata</p>
+                    </div>
+                    <div class="staff">
+                        <img src="img/staff_02.png" class="staff-image">
+                        <p class="staff-name">Infinity DOI</p>    
+                    </div>
+                    <div class="staff">
+                        <img src="img/staff_03.png" class="staff-image">
+                        <p class="staff-name">Moro Masa</p>
+                    </div>
+                </div>    
+            </div>
+        </main>
+        <aside>
+            <div class="card-contents">
+                <h2 class="card-title">Access</h2>
+                <p>東京都渋谷区円山町28-3<br>いちご渋谷道玄坂ビル5F</p>
+                <p>渋谷駅より徒歩7分</p>
+            </div>
+        </aside>
+    </div>
     <footer>
         <small class="copyright">© 2021 Batty's Coffee Stand</small>
     </footer>
